@@ -6,7 +6,9 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 1.9.2 (TBD)
 -----------
 
-- ZipMemoryFile now supports zipped GDB data (#).
+- Fix a memory leak that can occur when iterating over a dataset using strides
+  (#1205).
+- ZipMemoryFile now supports zipped GDB data (#1203).
 
 1.9.1 (2023-02-09)
 ------------------
